--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <title>V/Vm-ifier</title>
     <link data-trunk rel="rust" />
     <link data-trunk rel="sass" href="index.scss" />
+    <link data-trunk rel="copy-dir" href="images">
   </head>
 </html>
