--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>V/Vm-ifier</title>
-    <link data-trunk rel="rust" />
+    <link data-trunk rel="rust" data-wasm-opt-params="--enable-bulk-memory"/>
     <link data-trunk rel="sass" href="index.scss" />
     <link data-trunk rel="copy-dir" href="images">
   </head>
